<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/fragment_main_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="location text"
        android:drawableStart="@drawable/outline_location_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_main_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="date text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_main_weather_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_location_text"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/fragment_main_weather_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fragment_main_weather_temp_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_weather_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_main_weather_temp_extra"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_weather_temp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_main_weather_temp_extra_min"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_main_weather_temp_extra_max">

            <TextView
                android:id="@+id/fragment_main_weather_temp_extra_min_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_min_temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_main_weather_temp_extra_min_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/fragment_main_weather_temp_extra_min_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="32 C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_main_weather_temp_extra_min_header"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_main_weather_temp_extra_max"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_main_weather_temp_extra_min"
            app:layout_constraintEnd_toStartOf="@id/fragment_main_weather_temp_extra_feels">

            <TextView
                android:id="@+id/fragment_main_weather_temp_extra_max_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_max_temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_main_weather_temp_extra_max_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/fragment_main_weather_temp_extra_max_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="32 C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_main_weather_temp_extra_max_header"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_main_weather_temp_extra_feels"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_main_weather_temp_extra_max"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/fragment_main_weather_temp_extra_feels_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_feels_like_temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_main_weather_temp_extra_feels_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/fragment_main_weather_temp_extra_feels_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="32 C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_main_weather_temp_extra_feels_header"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>